cmake_minimum_required(VERSION 3.22)
project(Medium)

set(CMAKE_CXX_STANDARD 14)

# add_executable(Medium main.cpp)
# add_executable(Medium addTwoNumbers.cpp)
# add_executable(Medium lengthOfLongestSubstring.cpp)
# add_executable(Medium longestPalindrome.cpp)
# add_executable(Medium maxArea.cpp)
# add_executable(Medium threeSum.cpp "threeSum(new).cpp")
# add_executable(Medium "threeSum(new).cpp" letterCombinations.cpp)
# add_executable(Medium letterCombinations.cpp removeNthFromEnd.cpp)
# add_executable(Medium removeNthFromEnd.cpp generateParenthesis.cpp)
# add_executable(Medium generateParenthesis.cpp nextPermutation.cpp)
# add_executable(Medium nextPermutation.cpp search.cpp)
add_executable(Medium search.cpp)











