cmake_minimum_required(VERSION 3.22)
project(Medium)

set(CMAKE_CXX_STANDARD 14)

# add_executable(Medium main.cpp)
# add_executable(Medium addTwoNumbers.cpp)
# add_executable(Medium lengthOfLongestSubstring.cpp)
# add_executable(Medium longestPalindrome.cpp)
# add_executable(Medium maxArea.cpp)
# add_executable(Medium threeSum.cpp "threeSum(new).cpp")
# add_executable(Medium "threeSum(new).cpp" letterCombinations.cpp)
# add_executable(Medium letterCombinations.cpp removeNthFromEnd.cpp)
# add_executable(Medium removeNthFromEnd.cpp generateParenthesis.cpp)
# add_executable(Medium generateParenthesis.cpp nextPermutation.cpp)
# add_executable(Medium nextPermutation.cpp search.cpp)
# add_executable(Medium search.cpp searchRange.cpp)
# add_executable(Medium searchRange.cpp toySoldiers.cpp)
# add_executable(Medium toySoldiers.cpp)
# add_executable(Medium searchRange.cpp Alibaba.cpp)
# add_executable(Medium Alibaba.cpp combinationSum.cpp)
# add_executable(Medium combinationSum.cpp permute.cpp)
# add_executable(Medium permute.cpp rotate.cpp)
# add_executable(Medium rotate.cpp groupAnagrams.cpp)
# add_executable(Medium groupAnagrams.cpp Meide_01.cpp)
# add_executable(Medium Meide_01.cpp Meide_02.cpp)
# add_executable(Medium Meide_02.cpp canJump.cpp)
# add_executable(Medium canJump.cpp merge.cpp)?
# add_executable(Medium merge.cpp uniquePaths.cpp)
add_executable(Medium uniquePaths.cpp)















